# SystemT

./: .gitignore  .lia.cache  .ocamlformat  Makefile  README.md  _CoqProject  dune-project  report.md
definitions/: Reduction.v  Terms.v  Types.v  Typing.v  ident.v  terms.v  types.v  typing.v
facts/: Confluence.v  TypingSubstitution.v
interpreter/: Interpreter.v  ast.ml  dune  interpreter.ml  lexer.mll  parser.mly  pretty.ml  util.ml
theories/: dune
theories/Definitions/: Context.v  Ident.v  Reduction.v  Term.v  Type.v  Typing.v
theories/Theorems/: ChurchRosser.v  Context.v  NormalForm.v  Reduction.v  StrongNormalization.v  SubjectReduction.v  Substitution.v  TermExample.v  Type.v  Typing.v  Unification.v
