(coq.extraction
 (prelude Interpreter)
 (extracted_modules coqInterpreter)
 (theories SystemT))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --dump)
 (infer true))

(executable
 (name interpreter)
 (modules interpreter pretty coqInterpreter util ast parser lexer)
 (libraries zarith))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
